--- a/index.html
+++ b/index.html
@@ -81,10 +81,7 @@
 
 					
 
-					<p>I am an energetic & hard working individual pursuing education in the area of
-Computer Science with knowledge of working in languages like Java, PHP,
-Python and seeking the opportunity to work in well-known companies. My goal is to become successful in tech industry.  </p>
-<p>I like to build web development project also I like to work as a graphic designer in Illustrator, After Effects, Premier Pro. </p>
+					<p>I am an energetic & hardworking individual pursuing an education in Computer Science. I want to pursue my goal with absolute dedication, sincerity, honesty, and skill. My only objective is to help employers achieve their goals with my commitment to meeting deadlines and providing quality and detail-oriented service. Motivated to learn new skills, sharp edges, and broadening perspectives, work in different fields and gather experiences on practical platforms besides acquiring academic knowledge. </p>
 
 
 					<hr>
